_sass/_detail.scss
/** 
 * Header
 */

 .header-detail {
  @extend %clearfix;
  padding-top: 30px;
  padding-bottom: 100px;

    .logo {
      font-family: "Lobster", cursive;
      font-size: 30px;
      float: left;

      a {
        color: white;
        @include animate-underline(white, 0.3s);
      }
    }

    .contact-button {
      float: right;
    }

    .header-content {
      text-align: center;
    }

    .nav {
      margin-bottom: 70px;
    }

    h1.post-title {
      font-size: 40px;
      font-weight: bold;
    }

    h2.post-subtitle {
      font-size: 20px;
      font-weight: normal;
      margin-bottom: 70px; 
    }
 }

 /** 
 * Content
 */

 .content-section {
  @include border-top-serrated($serrated-border-height, #FFF);

  color: #202117;
  background-color: white;
  font-size: 15px;
  line-height: 200%;
  padding-top: 90px;

    p {
      font-family: "Roboto Slab", serif;
      margin-bottom: 40px;
    }

    h3 {
      font-size: 20px;
      font-weight: bold;
      text-align: center;
    }

    img {
      margin-bottom: 10px;
    }

    figure {
      margin-bottom: 40px;
    }

    // hide default header generated by Jekyll
    .post-header {
      display: none;
    }

    .post-custom-header {
      margin-bottom: 50px;

      h3 {
        text-align: left;
      }
    }

    .post-meta {
      h3 {
        margin-bottom: 8px;
      }

      p {
        margin-bottom: 20px;
      }

      a {
        margin-top: 20px;
      }
    }

    .post-content {
      h3{
        margin-top: 70px;
      }

      img {
        width: 100%;
      }
    }
 }

 /** 
 * Footer
 */

 .footer-detail {

  text-align: center;
  padding-top: 60px;
  padding-bottom: 0px;

  h2 {
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 40px;
  }

  .post-buttons {
    @extend %clearfix;
    margin-bottom: 40px;

    .previous-post-button {
      float: left;

      @include mobile {
        float: none;
        margin-bottom: 20px;
      }
    }

    .next-post-button {
      float: right;

      @include mobile {
        float: none;
      }
    }
  }

  .footer-content p {
    font-size: 15px;
    font-weight: normal;
  }
 }

